Update footer styles and add social box.

--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
 				<h2>See The Projects</h2>
 			</div>
 		</div>
+	
+		<div class="bg-yellow text-center">
+			<a href="https://www.facebook.com/Freedom1stfcu/" target="_blank"><img src="img/social.png"></a>
+		</div>
 
 		<div class="footer-bar group">
 			<div class="wrap">
