Add photo/info listing to the index.php file - convert it to php from html, add thanks page, and add project list styles.

--- a/thanks.html
+++ b/thanks.html
@@ -16,33 +16,10 @@
 			<img src="img/header.jpg" class="header">
 		</header>
 		
-		<div class="bg-green group pad no-top">
+		<div class="bg-green group pad no-top" style="border-bottom: 20px solid white;">
 			<div class="intro">	
-				<h2>WIN $250 for your project!</h2>
-				<p>Apply for a home equity line of credit and share a photo of your project and you’ll be automatically entered to win! </p>
-			</div>
-			<form name="upload" action="submit.php" method="post">
-			<div class="half">
-				<p><labal>Your Name
-					<input name="name" type="text" value="" /></labal></p>
-				<p><labal>Project Name
-					<input name="project-name" type="text" value="" /></labal></p>
-				<p><labal>Upload Photo<br>
-					<input name="photo" type="file" /></labal></p>
-			</div>
-			<div class="half">
-				<p><labal>Email
-					<input name="email" type="text" value="" /></labal></p>
-				<p><labal>Phone
-					<input name="phone" type="text" value="" /></labal></p>
-				<p><input type="submit" name="submit" value="Submit" /></p>
-			</div>
-			</form>
-		</div>
-
-		<div class="bg-white pad" style="min-height: 400px;">
-			<div class="intro">
-				<h2>See The Projects</h2>
+				<h2>Thanks for entering our home improvement contest!</h2>
+				<p>We'll review your submission - in the meantime, you can see it listed alongside the other submissions back on the <a href="index.php">main page</a>.</p>
 			</div>
 		</div>
 	
