Add links to the home equity online loan/credit application, and update copy on thanks page.

--- a/thanks.html
+++ b/thanks.html
@@ -13,13 +13,14 @@
 	<main class="container">
 		
 		<header>
-			<img src="img/header.jpg" class="header">
+			<a href="https://www.freedom1stcu.com/our-services/apply-online.aspx" target="_blank"><img src="img/header.jpg" class="header"></a>
 		</header>
 		
 		<div class="bg-green group pad no-top" style="border-bottom: 20px solid white;">
 			<div class="intro">	
-				<h2>Thanks for entering our home improvement contest!</h2>
-				<p>We'll review your submission - in the meantime, you can see it listed alongside the other submissions back on the <a href="index.php">main page</a>.</p>
+				<h2>Thanks for sharing!</h2>
+				<p>Have you applied for a Home Equity Line of Credit? If not, you'll need to do so in order to qualify for the $250 prize, so don't forget to <a href="https://www.freedom1stcu.com/our-services/apply-online.aspx" target="_blank">Apply Now!</a></p>
+				<p>We'll review your submission - in the meantime, you can see it listed alongside the other submissions back on the <a href="/">main page</a>.</p>
 			</div>
 		</div>
 	
