Update Facebook page link.

--- a/thanks.html
+++ b/thanks.html
@@ -25,7 +25,7 @@
 		</div>
 	
 		<div class="bg-yellow text-center">
-			<a href="https://www.facebook.com/Freedom1stfcu/" target="_blank"><img src="img/social.png"></a>
+			<a href="https://www.facebook.com/Freedom1stCU/" target="_blank"><img src="img/social.png"></a>
 		</div>
 
 		<div class="footer-bar group">
